manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betpawa-deployment
  labels:
    app: betpawa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: betpawa
  template:
    metadata:
      labels:
        app: betpawa
    spec:
      containers:
      - name: betpawa
        image: liamnou/betpawa:1.0.0
        ports:
        - containerPort: 5000
