manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: betpawa
  labels:
    app: betpawa
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: betpawa
